--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,32 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 numba==0.62.1
 numpy==2.2.6
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu11==9.1.0.70
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu11==10.3.0.86
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu11==2.21.5
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu11==11.8.86
+nvidia-nvtx-cu12==12.8.90
 onnxruntime==1.23.2
 opencv-python==4.11.0.86
 opencv-python-headless==4.12.0.88
@@ -126,10 +152,15 @@ tifffile==2025.5.10
 timm==1.0.22
 tokenizers==0.22.1
 tomlkit==0.13.3
+torch==2.7.1+cu118
+torchaudio==2.7.1+cu118
+torchmetrics==1.8.2
+torchvision==0.22.1+cu118
 tornado==6.5.3
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.57.3
+triton==3.3.1
 typer==0.20.0
 typer-slim==0.20.0
 typing-inspection==0.4.2
